# testCenter_django

./: .env.example  .gitmodules  .markdownlint.json  .pylintrc  LICENSE  Pipfile  README.md  dumpdata.json  generate_diagram.py  manage.py  poetry-setup.md  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: python-package.yml
api/: index.py
apps/certifications/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/certifications/migrations/: 0001_initial.py  0002_rename_durantion_certification_duration.py
apps/certifiers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/certifiers/migrations/: 0001_initial.py
apps/clients/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/testCenter/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/testCenter/migrations/: 0001_initial.py
apps/utils/: apps.py  json_responses.py  views.py  widgets.py
apps/utils/management/commands/: loaddata_db.py
static/css/: apps_detail.css  apps_form.css  apps_list.css  body.css  buttons.css  footer.css  header.css  login.css  modals.css  pagination.css  styles.css  vertical_tab.css
static/js/: modal.js
staticfiles/css/: apps_home.css  buttons.css  footer.css  modals.css  select2_custom.css  styles.css
staticfiles/shared-styles/: README.md
staticfiles/shared-styles/css/: apps_form.css  header.css  home.css  login.css  record_counter.css  vertical_tab.css
templates/: base.html  css_includes.html  home.html  js_includes.html
templates/certifications/: certifications_confirmDelete.html  certifications_detail.html  certifications_form.html  certifications_home.html  certifications_list.html
templates/certifiers/: certifiers_confirmDelete.html  certifiers_detail.html  certifiers_form.html  certifiers_home.html  certifiers_list.html
templates/clients/: clients_confirmDelete.html  clients_detail.html  clients_form.html  clients_home.html  clients_list.html
templates/includes/: apps_detail.html  footer.html  modals.html
templates/registration/: login.html
templates/testCenters/: exams_list.html  testCenters_confirmDelete.html  testCenters_detail.html  testCenters_form.html  testCenters_home.html  testCenters_list.html
testCenter/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
venturix_testCenter/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
