[project]
name = "testcenter-django"
version = "0.1.0"
description = "Projeto Django para gerenciamento de exames e provas no contexto de um Centro de Provas. Inclui funcionalidades de backend e integração para aplicações web."
authors = [
    {name = "André Ventura",email = "ti@asventura.com.br"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (==5.2.1)",
    "anyio (==4.9.0)",
    "asgiref (==3.8.1)",
    "astroid (==3.3.9)",
    "beautifulsoup4 (==4.13.4)",
    "black (==25.1.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "dill (==0.4.0)",
    "distlib (==0.3.9)",
    "django-bootstrap5 (==25.1)",
    "django-extensions (==4.1)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "flake8 (==7.2.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "isort (==6.0.1)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "mccabe (==0.7.0)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "pbs-installer (==2025.4.9)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "pluggy (==1.6.0)",
    "pycodestyle (==2.13.0)",
    "pyflakes (==3.3.2)",
    "pylint (==3.3.7)",
    "pymemcache (==4.0.0)",
    "pyproject-hooks (==1.2.0)",
    "pytest (==8.3.5)",
    "pytest-django (==4.11.1)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "setuptools (==80.4.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "sqlparse (==0.5.3)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.5.9.12)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.31.2)",
    "zstandard (==0.23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
pylint-django = "^2.6.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testCenter.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
