[project]
name = "testcenter-django"
version = "0.1.0"
description = "Projeto Django para gerenciamento de exames e provas no Centro de Provas."
authors = [{ name = "André Ventura", email = "ti@asventura.com.br" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "django >=5.2,<6.0",
    "django-bootstrap5 >=25.1,<26.0",
    "whitenoise >=6.9,<7.0",
    "gunicorn >=23.0,<24.0",
    "psycopg2-binary >=2.9,<3.0",
    "python-dotenv >=1.0,<2.0",
    "graphviz >=0.20,<1.0",
    "pydotplus >=2.0,<3.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.11"
pylint = "^3.3"
pylint-django = "^2.6"
black = "^25.0"
isort = "^6.0"
flake8 = "^7.0"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "venturix_testCenter.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.poetry]
package-mode = false
