[project]
name = "testcenter-django"
version = "0.1.0"
description = "Projeto Django para gerenciamento de exames e provas no Centro de Provas."
authors = [{ name = "André Ventura", email = "ti@asventura.com.br" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "django >=5.2,<6.0",
    "django-bootstrap5 >=25.1,<26.0",
    "whitenoise >=6.9,<7.0",
    "gunicorn >=23.0,<24.0",
    "psycopg2-binary >=2.9,<3.0",
    "python-dotenv >=1.0,<2.0",
    "graphviz >=0.20,<1.0",
    "pydotplus >=2.0,<3.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.11"
django-extensions = "^4.1"
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "venturix_testCenter.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.poetry]
package-mode = false

# --- ADICIONE ESTAS SEÇÕES ABAIXO ---

[tool.ruff]
# Diz ao Ruff qual é a versão mínima do Python do seu projeto
# Ele usará isso da sua linha 'requires-python' (>=3.10), mas é bom ser explícito.
target-version = "py310"

[tool.ruff.lint]
# Seleciona quais regras o Ruff deve aplicar:
# E, F: Regras básicas (substitui o Flake8)
# I: Regras de organização de 'import' (substitui o isort)
# DJ: Regras específicas do Django (substitui o pylint-django)
select = ["E", "F", "I", "DJ"]

[tool.ruff.format]
# Esta seção faz o Ruff funcionar como o 'Black' (formatador)
quote-style = "double"
line-ending = "auto"